k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: microservices-ingress
  namespace: microservices

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: authapi
                port:
                  number: 80

          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: orderapi
                port:
                  number: 80
